<resources>
    <string name="app_name">Gradr</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_match">Your passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Steve's localhost -->
    <!--<string name="http_address_server">"http://192.168.100.107"</string>-->
   <!-- <string name="http_address_server">"140.193.193.188"-->
    <string name="http_address_server">"http://ec2-52-26-203-11.us-west-2.compute.amazonaws.com"
    </string>
    <!--<string name="http_address_server">"http://10.0.2.2:1080"</string>-->
    <string name="title_activity_swipe">Find new study buddies</string>

    <!-- Strings related to swiping -->
    <!--<string name="cat_api_url">"http://thecatapi.com/api/images/get?format=src&amp;type=jpg&amp;size=small"</string>-->

    <!-- Strings related to profile -->
    <string name="profile">Profile</string>
    <string name="title_activity_match_list">View Matches</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_view_match">Your Match</string>
    <string name="title_activity_view_rejector">Your Rejection</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="send_button">Send</string>
    <string name="message_prompt">Type message here...</string>
    <string name="refresh_button">Refresh</string>
    <string name="title_activity_profile">Profile</string>
    <string name="prompt_about">About You</string>
    <string name="prompt_help">I Need Help With</string>
    <string name="prompt_school">School</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_city">City</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_courses">Courses</string>
    <string name="prompt_dob">Date of Birth (YYYY-MM-DD)</string>
    <string name="prompt_picture">Profile Picture URL</string>
    <string name="label_username">Username</string>
    <string name="action_save">Save</string>
    <string name="error_invalid_date">Invalid date</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="error_invalid_url">Please enter a valid URL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
