<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/footer_lodyas"
    tools:context="com.se2.gradr.gradr.LoginActivity">

    <ScrollView
        android:id="@+id/profile_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#095832"
        android:padding="12px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_username"
            android:id="@+id/textView" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/tb_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_about"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edittext_rounded_corners"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/tb_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_help"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edittext_rounded_corners"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/tb_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_school"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edittext_rounded_corners"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/tb_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_first_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edittext_rounded_corners"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/tb_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edittext_rounded_corners"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</LinearLayout>